{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 28,
  "lineage": "05aa84a3-1ae6-e045-b1cd-021de1d6cb34",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main-two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-064fe38c173a10939",
            "association_id": "eipassoc-005043a3fb0ba5a66",
            "domain": "vpc",
            "id": "eipalloc-064fe38c173a10939",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0153f69ebd694146f",
            "private_dns": "ip-10-2-0-91.ap-south-1.compute.internal",
            "private_ip": "10.2.0.91",
            "public_dns": "ec2-13-127-213-228.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.213.228",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Test-ngw-ip-two"
            },
            "tags_all": {
              "Name": "Test-ngw-ip-two"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:449179126436:internet-gateway/igw-00fe8bcbbbd007d85",
            "id": "igw-00fe8bcbbbd007d85",
            "owner_id": "449179126436",
            "tags": {
              "Name": "Test-igw"
            },
            "tags_all": {
              "Name": "Test-igw"
            },
            "vpc_id": "vpc-01cfa79362df13e7c"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main-two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-064fe38c173a10939",
            "association_id": "eipassoc-005043a3fb0ba5a66",
            "connectivity_type": "public",
            "id": "nat-0b2fd2542732b7d35",
            "network_interface_id": "eni-0153f69ebd694146f",
            "private_ip": "10.2.0.91",
            "public_ip": "13.127.213.228",
            "subnet_id": "subnet-0d0030a74d7043de5",
            "tags": {
              "Name": "Test-ngw-two"
            },
            "tags_all": {
              "Name": "Test-ngw-two"
            }
          },
          "dependencies": [
            "aws_eip.main-two",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:449179126436:route-table/rtb-0aba0bc1beaf0c06e",
            "id": "rtb-0aba0bc1beaf0c06e",
            "owner_id": "449179126436",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00fe8bcbbbd007d85",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Test-Public-RT"
            },
            "tags_all": {
              "Name": "Test-Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cfa79362df13e7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:449179126436:route-table/rtb-08444b2c381d726bd",
            "id": "rtb-08444b2c381d726bd",
            "owner_id": "449179126436",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b2fd2542732b7d35",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Test-Private-RT"
            },
            "tags_all": {
              "Name": "Test-Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cfa79362df13e7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.main-two",
            "aws_nat_gateway.main-two",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020bdbd104b9d4470",
            "route_table_id": "rtb-0aba0bc1beaf0c06e",
            "subnet_id": "subnet-0d0030a74d7043de5"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.main",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6825f5d7818e30a",
            "route_table_id": "rtb-0aba0bc1beaf0c06e",
            "subnet_id": "subnet-089673eb42a87957a"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.main",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internet_access2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d37e059e25d407b5",
            "route_table_id": "rtb-08444b2c381d726bd",
            "subnet_id": "subnet-0338fc37331dbf68f"
          },
          "dependencies": [
            "aws_eip.main-two",
            "aws_nat_gateway.main-two",
            "aws_route_table.main-two",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073f0244e5aee4c9a",
            "route_table_id": "rtb-08444b2c381d726bd",
            "subnet_id": "subnet-0ed6972b4f9704a47"
          },
          "dependencies": [
            "aws_eip.main-two",
            "aws_nat_gateway.main-two",
            "aws_route_table.main-two",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:449179126436:security-group/sg-019f7b1d87644e5d0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-019f7b1d87644e5d0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Test-Public-sg",
            "name_prefix": "",
            "owner_id": "449179126436",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Test-Public-sg"
            },
            "tags_all": {
              "Name": "Test-Public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cfa79362df13e7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_egress_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-182193355",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-019f7b1d87644e5d0",
            "security_group_rule_id": "sgr-0df16ea9030f5f7e5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_ingress_public_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-2022296031",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-019f7b1d87644e5d0",
            "security_group_rule_id": "sgr-0cb18b80ab4b0285a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_ingress_public_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-887337435",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-019f7b1d87644e5d0",
            "security_group_rule_id": "sgr-02e9037be26d7620e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:449179126436:subnet/subnet-0338fc37331dbf68f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0338fc37331dbf68f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "449179126436",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Test-private-sg",
              "kubernetes.io/cluster/Test-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "Test-private-sg",
              "kubernetes.io/cluster/Test-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01cfa79362df13e7c"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:449179126436:subnet/subnet-0ed6972b4f9704a47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.2.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed6972b4f9704a47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "449179126436",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Test-private-sg",
              "kubernetes.io/cluster/Test-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "Test-private-sg",
              "kubernetes.io/cluster/Test-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01cfa79362df13e7c"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:449179126436:subnet/subnet-0d0030a74d7043de5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.2.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0030a74d7043de5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "449179126436",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Test-public-sg",
              "kubernetes.io/cluster/Test-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Test-public-sg",
              "kubernetes.io/cluster/Test-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01cfa79362df13e7c"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:449179126436:subnet/subnet-089673eb42a87957a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089673eb42a87957a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "449179126436",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Test-public-sg",
              "kubernetes.io/cluster/Test-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Test-public-sg",
              "kubernetes.io/cluster/Test-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01cfa79362df13e7c"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:449179126436:vpc/vpc-01cfa79362df13e7c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-00a4438c1e53e7667",
            "default_route_table_id": "rtb-0d6b0f4efcb0e898a",
            "default_security_group_id": "sg-069808a475edd1f5e",
            "dhcp_options_id": "dopt-0212f064a2f417761",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01cfa79362df13e7c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d6b0f4efcb0e898a",
            "owner_id": "449179126436",
            "tags": {
              "Name": "Test-vpc",
              "kubernetes.io/cluster/Test-cluster": "shared"
            },
            "tags_all": {
              "Name": "Test-vpc",
              "kubernetes.io/cluster/Test-cluster": "shared"
            }
          }
        }
      ]
    }
  ]
}